--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
   zoom: 170%;
-  background-image: url("img/background-mine.jpg");
+  background-image: url("../img/background-mine.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
